Fixes #8749: prevent navbar nav from overlapping navbar toggle

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -20,8 +20,6 @@
 // -------------------------
 
 .navbar-nav {
-  // Space out from .navbar .brand and .btn-navbar when stacked in mobile views
-  margin-top: 10px;
   margin-bottom: 15px;
 
   > li > a {
@@ -93,7 +91,15 @@
   padding-bottom: @navbar-padding-vertical;
   // Clear floated elements and prevent collapsing of padding
   .clearfix();
+
+  // When there is no `.navbar-brand` present (which normally sits between the
+  // navbar brand and toggle), prevent the nav from overlapping the toggle.
+  .navbar-toggle + & {
+    width: 100%;
+    margin-top: @navbar-height;
+  }
 }
+
 
 // Scrollable navbar navigation
 //
